lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__openai_compatible__encode_provider_options_other_namespace_ignored.snap
---
source: lib/components/fabro-llm/tests/it/wire/openai_compatible.rs
expression: rendered
---
{
  "model": "test-model",
  "messages": [
    {
      "role": "user",
      "content": "Hello"
    }
  ],
  "max_tokens": 128
}
